# chernoengine2

./: CMakeLists.txt  imgui.ini
GLSL/: .2e_square.glsl.swp  1e_texture.glsl  2e_flat_color.glsl  main.fs  main.shader  main.vs  square.shader  texture.shader  triangle.shader
assets/GLSL/: 1e_square.glsl  1e_triangle.glsl  2e_texture.glsl  2e_texture_and_color.glsl  2e_texture_batching.glsl
assets/tracing/: profile_runtime.json
chernoengine2/core/: application.cpp  application.hpp  core.hpp  input.cpp  input.hpp  key_codes.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  linux_window.cpp  linux_window.hpp  log.cpp  log.hpp  window.cpp  window.hpp
chernoengine2/debug/: instrumentation_timer.cpp  instrumentation_timer.hpp  instrumentor.cpp  instrumentor.hpp
chernoengine2/events/: application_event.cpp  application_event.hpp  event.cpp  event.hpp  key_event.cpp  key_event.hpp  mouse_event.cpp  mouse_event.hpp
chernoengine2/imgui/: imgui_layer.cpp  imgui_layer.hpp
chernoengine2/local_tests/: CMakeLists.txt  logging.cpp
chernoengine2/main/: CMakeLists.txt  main.cpp
chernoengine2/main/example_layers/: first_example.cpp  first_example.hpp  second_example.cpp  second_example.hpp
chernoengine2/opengl/: opengl_buffer.cpp  opengl_buffer.hpp  opengl_renderer_api.cpp  opengl_renderer_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp
chernoengine2/renderer/: buffer.cpp  buffer.hpp  graphics_context.cpp  graphics_context.hpp  opengl_context.cpp  opengl_context.hpp  orthographic_camera.cpp  orthographic_camera.hpp  orthographic_camera_controller.cpp  orthographic_camera_controller.hpp  render_command.cpp  render_command.hpp  renderer.cpp  renderer.hpp  renderer_2_d.cpp  renderer_2_d.hpp  renderer_2d.cpp  renderer_2d.hpp  renderer_api.cpp  renderer_api.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
